--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="active" href="index.php">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
