--- a/team.html
+++ b/team.html
@@ -35,21 +35,21 @@
         <div class="container d-flex align-items-center justify-content-between">
             <div class="logo">
                 <!-- <h1 class="text-light"><a href="index.php">NIDA</a></h1> -->
-                <a href="index.php"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
+                <a href="index.html"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
                         style="border-radius:50px;"></a>
             </div>
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="active" href="index.php">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="about.php">About NIDA</a></li>
-                            <li><a href="board-of-direct.php">Board Of Directors</a></li>
-                            <li><a href="mentors.php">Mentors</a></li>
-                            <li><a href="team.php">Team NIDA</a></li>
-                            <li><a href="portfolio.php">NIDA Portfolio</a></li>
+                            <li><a href="about.html">About NIDA</a></li>
+                            <li><a href="board-of-direct.html">Board Of Directors</a></li>
+                            <li><a href="mentors.html">Mentors</a></li>
+                            <li><a href="team.html">Team NIDA</a></li>
+                            <li><a href="portfolio.html">NIDA Portfolio</a></li>
                             <!-- <li class="dropdown">
                   <a href="#"
                     ><span>Publications</span>
@@ -61,21 +61,21 @@
                 </li> -->
                         </ul>
                     </li>
-                    <li><a href="services.php">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Programs</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="ideasdl.php">Ideas development league </a></li>
+                            <li><a href="ideasdl.html">Ideas development league </a></li>
                             <li>
-                                <a href="inventorsdlc.php">Inventors’ Development Clubs </a>
+                                <a href="inventorsdlc.html">Inventors’ Development Clubs </a>
                             </li>
                             <li>
-                                <a href="bootcamp.php">Holiday Bootcamp/Ideas Project Development Camp
+                                <a href="bootcamp.html">Holiday Bootcamp/Ideas Project Development Camp
                                 </a>
                             </li>
                             <li>
-                                <a href="IP.php">IP Referral
+                                <a href="IP.html">IP Referral
                                 </a>
                             </li>
                         </ul>
@@ -108,7 +108,7 @@
                                 <a href="#"><span>Fellows </span> <i class="bi bi-chevron-right"></i></a>
                                 <ul>
                                     <li>
-                                        <a href="aboutFP.php">About the NIDA Fellows Program</a>
+                                        <a href="aboutFP.html">About the NIDA Fellows Program</a>
                                     </li>
                                     <li>
                                         <a href="#">Current Fellow Resources</a>
@@ -133,7 +133,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="contact.php">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
