--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="logo">
                 <!-- <h1 class="text-light"><a href="index.php">NIDA</a></h1> -->
 
-                <a href="index.php"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
+                <a href="index.html"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
                         style="border-radius:50px;"></a>
             </div>
 
