--- a/bootcamp.html
+++ b/bootcamp.html
@@ -267,7 +267,7 @@
                                         <fieldset class="mt-4">
                                             <legend for="city">Gender</legend>
                                             <div class="form-group">
-                                                <input id="" type="checkbox" name="male" class="" required /> Male
+                                                <input id="" type="checkbox" name="male" class="" required /> Male <br>
                                                 <input id="" type="checkbox" name="female" class="" required /> Female
                                             </div>
                                         </fieldset>
@@ -354,8 +354,8 @@
                                         <fieldset>
                                             <p for="Name">Do you have any medical condition?</p>
                                             <div class="form-group">
-                                                <input id="" type="checkbox" name="" class="" required /> NO
-                                                <input id="" type="checkbox" name="" class="" required /> YES
+                                                <input id="" type="checkbox" name="" class="" required /> NO <br>
+                                                <input id="" type="checkbox" name="" class="" required /> YES <br>
                                                 (If yes please specify)
                                                 <input id="" type="text" name="" class="" required />
 
@@ -374,13 +374,13 @@
                                             <p class="mt-5">T-Shirt Size (required)
                                             </p>
                                             <div class="form-group">
-                                                <input id="" type="checkbox" name="" class="" required /> XS
-                                                <input id="" type="checkbox" name="" class="" required /> S
-                                                <input id="" type="checkbox" name="" class="" required /> M
-                                                <input id="" type="checkbox" name="" class="" required /> L
-                                                <input id="" type="checkbox" name="" class="" required /> XL
-                                                <input id="" type="checkbox" name="" class="" required /> XXL
-                                                (If yes please specify)
+                                                <input id="" type="checkbox" name="" class="" required /> XS <br>
+                                                <input id="" type="checkbox" name="" class="" required /> S  <br>
+                                                <input id="" type="checkbox" name="" class="" required /> M   <br>
+                                                <input id="" type="checkbox" name="" class="" required /> L  <br>
+                                                <input id="" type="checkbox" name="" class="" required /> XL  <br>
+                                                <input id="" type="checkbox" name="" class="" required /> XXL <br>
+                                                (If yes please specify) <br>
                                                 <input id="" type="text" name="" class="" required />
 
                                             </div>
