--- a/bootcamp.html
+++ b/bootcamp.html
@@ -274,7 +274,7 @@
                                         <fieldset class="mt-4">
                                             <legend for="city">Religion</legend>
                                             <div class="form-group">
-                                                <input id="" type="checkbox" name="christianity" required />
+                                                <input id="" type="checkbox" name="christianity" required /><br>
                                                 Christianity
 
                                                 <input id="" type="checkbox" name="islamic" class="" required /> Islamic
@@ -356,7 +356,7 @@
                                             <div class="form-group">
                                                 <input id="" type="checkbox" name="" class="" required /> NO <br>
                                                 <input id="" type="checkbox" name="" class="" required /> YES <br>
-                                                (If yes please specify)
+                                                (If yes please specify)<br>
                                                 <input id="" type="text" name="" class="" required />
 
                                             </div>
