--- a/bootcamp.html
+++ b/bootcamp.html
@@ -274,8 +274,8 @@
                                         <fieldset class="mt-4">
                                             <legend for="city">Religion</legend>
                                             <div class="form-group">
-                                                <input id="" type="checkbox" name="christianity" required />
-                                                Christianity <br>
+                                                <input id="" type="checkbox" name="christianity" required /><br>
+                                                Christianity 
 
                                                 <input id="" type="checkbox" name="islamic" class="" required /> Islamic
                                             </div>
