--- a/team.html
+++ b/team.html
@@ -180,7 +180,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>Shirgba Joel Kaaka</h4>
                                 <span>Chief Executive Officer</span>
 
@@ -200,7 +200,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>Pst. Ariel Greatness</h4>
                                 <span>Project Development & Training Manager</span>
 
@@ -220,7 +220,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>Pever Collins . L</h4>
                                 <span>IT DIRECTOR / FACILITATOR</span>
 
@@ -239,7 +239,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>Robert Lubem</h4>
                                 <span>Director Inventors Development Club (INDEC) </span>
 
@@ -259,7 +259,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>Shirgba Maureen</h4>
                                 <span>Coordinator Of women in innovation</span>
 
@@ -279,7 +279,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>Sheila moor</h4>
                                 <span>executive marketing director</span>
 
@@ -299,7 +299,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>Bem Shagba</h4>
                                 <span>director of finance</span>
 
@@ -318,7 +318,7 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info">
+                            <div class="member-info text-center">
                                 <h4>solomon kershima yateghtegh</h4>
                                 <span>IT CONSULTANT</span>
                             </div>
