--- a/team.html
+++ b/team.html
@@ -180,9 +180,9 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info text-center">
-                                <h4>Shirgba Joel Kaaka</h4>
-                                <span>Chief Executive Officer</span>
+                            <div class="member-info ">
+                                <h4 class="text-center">Shirgba Joel Kaaka</h4>
+                                <span class="text-center">Chief Executive Officer</span>
 
                             </div>
                         </div>
@@ -201,8 +201,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Pst. Ariel Greatness</h4>
-                                <span>Project Development & Training Manager</span>
+                                <h4 class="text-center">Pst. Ariel Greatness</h4>
+                                <span class="text-center">Project Development & Training Manager</span>
 
                             </div>
                         </div>
@@ -221,8 +221,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Pever Collins . L</h4>
-                                <span>IT DIRECTOR / FACILITATOR</span>
+                                <h4 class="text-center">Pever Collins . L</h4>
+                                <span class="text-center">IT DIRECTOR / FACILITATOR</span>
 
                             </div>
                         </div>
@@ -240,8 +240,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Robert Lubem</h4>
-                                <span>Director Inventors Development Club (INDEC) </span>
+                                <h4 class="text-center">Robert Lubem</h4>
+                                <span class="text-center">Director Inventors Development Club (INDEC) </span>
 
                             </div>
                         </div>
@@ -260,8 +260,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Shirgba Maureen</h4>
-                                <span>Coordinator Of women in innovation</span>
+                                <h4 class="text-center">Shirgba Maureen</h4>
+                                <span class="text-center">Coordinator Of women in innovation</span>
 
                             </div>
                         </div>
@@ -280,8 +280,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Sheila moor</h4>
-                                <span>executive marketing director</span>
+                                <h4 class="text-center">Sheila moor</h4>
+                                <span class="text-center">executive marketing director</span>
 
                             </div>
                         </div>
@@ -300,8 +300,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Bem Shagba</h4>
-                                <span>director of finance</span>
+                                <h4 class="text-center">Bem Shagba</h4>
+                                <span class="text-center">director of finance</span>
 
                             </div>
                         </div>
@@ -319,8 +319,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>solomon kershima yateghtegh</h4>
-                                <span>IT CONSULTANT</span>
+                                <h4 class="text-center">solomon kershima yateghtegh</h4>
+                                <span class="text-center">IT CONSULTANT</span>
                             </div>
                         </div>
                     </div>
