--- a/board-of-direct.html
+++ b/board-of-direct.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <!-- <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
+    <link href="assets/img/INVENTION ACADEMY LOGO edited.jpg" rel="icon" />
+    <link href="assets/img/INVENTION ACADEMY LOGO edited.jpg" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
@@ -38,33 +38,41 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a class="active" href="index.php">Home</a></li>
                     <li class="dropdown">
                         <a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="about.html">About NIDA</a></li>
-                            <li><a href="board-of-direct.html">Board Of Directors</a></li>
-                            <li><a href="mentors.html">Mentors</a></li>
-                            <li><a href="team.html">Team NIDA</a></li>
-                            <li><a href="portfolio.html">NIDA Portfolio</a></li>
+                            <li><a href="about.php">About NIDA</a></li>
+                            <li><a href="board-of-direct.php">Board Of Directors</a></li>
+                            <li class="dropdown">
+                                <a href="#"><span>Mentors</span> <i class="bi bi-chevron-down"></i></a>
+                                <ul>
+                                    <li><a href="#">register as a mentor</a></li>
+                                    <li>
+                                        <a href="#">meet a mentor</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a href="team.php">Team NIDA</a></li>
+                            <li><a href="portfolio.php">NIDA Portfolio</a></li>
 
                         </ul>
                     </li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services.php">Services</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Programs</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="ideasdl.html">Ideas development league </a></li>
+                            <li><a href="ideasdl.php">Ideas development league </a></li>
                             <li>
-                                <a href="inventorsdlc.html">Inventors’ Development Clubs </a>
+                                <a href="inventorsdlc.php">Inventors’ Development Clubs </a>
                             </li>
                             <li>
-                                <a href="#">Holiday Bootcamp/Ideas Project Development Camp
+                                <a href="bootcamp.php">Holiday Bootcamp/Ideas Project Development Camp
                                 </a>
                             </li>
                             <li>
-                                <a href="IP.html">IP Referral
+                                <a href="IP.php">IP Referral
                                 </a>
                             </li>
                         </ul>
@@ -97,7 +105,7 @@
                                 <a href="#"><span>Fellows </span> <i class="bi bi-chevron-right"></i></a>
                                 <ul>
                                     <li>
-                                        <a href="aboutFP.html">About the NIDA Fellows Program</a>
+                                        <a href="aboutFP.php">About the NIDA Fellows Program</a>
                                     </li>
                                     <li>
                                         <a href="#">Current Fellow Resources</a>
@@ -122,12 +130,23 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.php">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
             <!-- .navbar -->
         </div>
+        <?php
+        if (isset($_SESSION['reg_success'])) {
+        ?>
+            <div class="alert alert-success " role="alert">
+                <strong>Hey!</strong> <?php echo $_SESSION['reg_success']; ?>
+                <!-- <button type="button" class="" data-bs-dismiss="alert" aria-label="Close"></button> -->
+            </div>
+        <?php
+            unset($_SESSION['reg_success']);
+        }
+        ?>
     </header>
     <!-- End Header -->
 
@@ -161,7 +180,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
                             <div class="member-img">
-                                <img src="assets/img/directors/DIRECTOR4.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director1.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -179,7 +198,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up">
                             <div class="member-img">
-                                <img src="assets/img/directors/direct2.jpg" class="img-fluid" alt="" width="450px" style="border: aqua; border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director2.jpg" class="img-fluid" alt="" width="450px" style="border: aqua; border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -198,7 +217,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
                             <div class="member-img">
-                                <img src="assets/img/directors/direct1.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director3.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -216,7 +235,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
                             <div class="member-img">
-                                <img src="assets/img/directors/DIRECTOR3.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director4.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -234,7 +253,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
                             <div class="member-img">
-                                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director5.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -252,7 +271,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
                             <div class="member-img">
-                                <img src="assets/img/team/team-8.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director6.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -267,12 +286,47 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
+                        <div class="member" data-aos="fade-up" data-aos-delay="100">
+                            <div class="member-img">
+                                <img src="assets/img/executives/director7.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info text-center">
+                                <h4>Hon. Emmanuel Iorber</h4>
+                                <span>Director External Linkages & Government Coordination</span>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
+                        <div class="member" data-aos="fade-up" data-aos-delay="100">
+                            <div class="member-img">
+                                <img src="assets/img/executives/director8.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info text-center">
+                                <h4>Engr. Emeka Orame . C</h4>
+                                <span>Director Technical Training consultant</span>
+
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="200">
                             <div class="member-img">
-                                <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director9.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -291,7 +345,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="200">
                             <div class="member-img">
-                                <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director10.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -309,7 +363,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="200">
                             <div class="member-img">
-                                <img src="assets/img/directors/IMG-20230312-WA0012.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director11.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -326,7 +380,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="200">
                             <div class="member-img">
-                                <img src="assets/img/directors/yahaya.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/executives/director12.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -340,12 +394,47 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="fade-up" data-aos-delay="200">
+                            <div class="member-img">
+                                <img src="assets/img/executives/director13.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info text-center">
+                                <h4>Fave Solomon</h4>
+                                <span>Director hospitality & logistics</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="fade-up" data-aos-delay="200">
+                            <div class="member-img">
+                                <img src="assets/img/executives/director14.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info text-center">
+                                <h4>Daniel Tsaker</h4>
+                                <span>National Facilitator on trainings</span>
+                            </div>
+                        </div>
+                    </div>
 
-                    <h4 class="text-center mb-5 mt-5" style="color:#94c045;font-family:fantasy;">NIDA PATRONS</h4>
+                    <h4 class="text-center mb-5 mt-5 " style="color:#94c045;font-family:fantasy;">NIDA PATRONS
+                    </h4>
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
                             <div class="member-img">
-                                <img src="assets/img/directors/DIRECTOR5.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/patrons/patron1.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -363,7 +452,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="200">
                             <div class="member-img">
-                                <img src="assets/img/directors/1678902875172.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
+                                <img src="assets/img/patrons/patron2.jpg" class="img-fluid" alt="" width="450px" style="border-radius: 8px; height: 350px" />
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
