--- a/team.html
+++ b/team.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <!-- <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
+    <link href="assets/img/INVENTION ACADEMY LOGO edited.jpg" rel="icon" />
+    <link href="assets/img/INVENTION ACADEMY LOGO edited.jpg" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -35,21 +35,29 @@
         <div class="container d-flex align-items-center justify-content-between">
             <div class="logo">
                 <!-- <h1 class="text-light"><a href="index.php">NIDA</a></h1> -->
-                <a href="index.html"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
+                <a href="index.php"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
                         style="border-radius:50px;"></a>
             </div>
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a class="active" href="index.php">Home</a></li>
                     <li class="dropdown">
                         <a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="about.html">About NIDA</a></li>
-                            <li><a href="board-of-direct.html">Board Of Directors</a></li>
-                            <li><a href="mentors.html">Mentors</a></li>
-                            <li><a href="team.html">Team NIDA</a></li>
-                            <li><a href="portfolio.html">NIDA Portfolio</a></li>
+                            <li><a href="about.php">About NIDA</a></li>
+                            <li><a href="board-of-direct.php">Board Of Directors</a></li>
+                            <li class="dropdown">
+                                <a href="#"><span>Mentors</span> <i class="bi bi-chevron-down"></i></a>
+                                <ul>
+                                    <li><a href="#">register as a mentor</a></li>
+                                    <li>
+                                        <a href="#">meet a mentor</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a href="team.php">Team NIDA</a></li>
+                            <li><a href="portfolio.php">NIDA Portfolio</a></li>
                             <!-- <li class="dropdown">
                   <a href="#"
                     ><span>Publications</span>
@@ -61,21 +69,21 @@
                 </li> -->
                         </ul>
                     </li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services.php">Services</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Programs</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="ideasdl.html">Ideas development league </a></li>
+                            <li><a href="ideasdl.php">Ideas development league </a></li>
                             <li>
-                                <a href="inventorsdlc.html">Inventors’ Development Clubs </a>
+                                <a href="inventorsdlc.php">Inventors’ Development Clubs </a>
                             </li>
                             <li>
-                                <a href="bootcamp.html">Holiday Bootcamp/Ideas Project Development Camp
+                                <a href="bootcamp.php">Holiday Bootcamp/Ideas Project Development Camp
                                 </a>
                             </li>
                             <li>
-                                <a href="IP.html">IP Referral
+                                <a href="IP.php">IP Referral
                                 </a>
                             </li>
                         </ul>
@@ -108,7 +116,7 @@
                                 <a href="#"><span>Fellows </span> <i class="bi bi-chevron-right"></i></a>
                                 <ul>
                                     <li>
-                                        <a href="aboutFP.html">About the NIDA Fellows Program</a>
+                                        <a href="aboutFP.php">About the NIDA Fellows Program</a>
                                     </li>
                                     <li>
                                         <a href="#">Current Fellow Resources</a>
@@ -133,12 +141,23 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.php">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
             <!-- .navbar -->
         </div>
+        <?php
+        if (isset($_SESSION['reg_success'])) {
+        ?>
+        <div class="alert alert-success mt-5" role="alert">
+            <strong>Hey!</strong> <?php echo $_SESSION['reg_success']; ?>
+            <button type="button" class="" data-bs-dismiss="alert" aria-label="Close">&timesbar;</button>
+        </div>
+        <?php
+            unset($_SESSION['reg_success']);
+        }
+        ?>
     </header>
     <!-- End Header -->
 
@@ -180,9 +199,9 @@
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="member-info ">
-                                <h4 class="text-center">Shirgba Joel Kaaka</h4>
-                                <span class="text-center">Chief Executive Officer</span>
+                            <div class="member-info text-center">
+                                <h4>Shirgba Joel Kaaka</h4>
+                                <span>Chief Executive Officer</span>
 
                             </div>
                         </div>
@@ -201,8 +220,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4 class="text-center">Pst. Ariel Greatness</h4>
-                                <span class="text-center">Project Development & Training Manager</span>
+                                <h4>Pst. Ariel Greatness</h4>
+                                <span>Project Development & Training Manager</span>
 
                             </div>
                         </div>
@@ -221,34 +240,14 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4 class="text-center">Pever Collins . L</h4>
-                                <span class="text-center">IT DIRECTOR / FACILITATOR</span>
+                                <h4>Pever Collins . L</h4>
+                                <span>IT DIRECTOR / FACILITATOR</span>
 
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="border: #4747">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
-                            <div class="member-img">
-                                <img src="assets/img/team/team-8.jpg" class="img-fluid" alt="" width="450px"
-                                    style="border-radius: 8px; height: 350px" />
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
-                            </div>
-                            <div class="member-info text-center">
-                                <h4 class="text-center">Robert Lubem</h4>
-                                <span class="text-center">Director Inventors Development Club (INDEC) </span>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                        <div class="member" data-aos="fade-up">
                             <div class="member-img">
                                 <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="" width="450px"
                                     style="border-radius: 8px; height: 350px" />
@@ -260,15 +259,15 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4 class="text-center">Shirgba Maureen</h4>
-                                <span class="text-center">Coordinator Of women in innovation</span>
+                                <h4>Robert Lubem</h4>
+                                <span>Director Inventors Development Club (INDEC) </span>
 
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                        <div class="member" data-aos="fade-up" data-aos-delay="200">
+                        <div class="member" data-aos="fade-up">
                             <div class="member-img">
                                 <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="" width="450px"
                                     style="border-radius: 8px; height: 350px" />
@@ -280,8 +279,8 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4 class="text-center">Sheila moor</h4>
-                                <span class="text-center">executive marketing director</span>
+                                <h4>Shirgba Maureen</h4>
+                                <span>Coordinator Of women in innovation</span>
 
                             </div>
                         </div>
@@ -300,12 +299,13 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4 class="text-center">Bem Shagba</h4>
-                                <span class="text-center">director of finance</span>
+                                <h4>Sheila moor</h4>
+                                <span>executive marketing director</span>
 
                             </div>
                         </div>
                     </div>
+
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="200">
                             <div class="member-img">
@@ -319,8 +319,27 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4 class="text-center">solomon kershima yateghtegh</h4>
-                                <span class="text-center">IT CONSULTANT</span>
+                                <h4>Bem Shagba</h4>
+                                <span>director of finance</span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="fade-up" data-aos-delay="200">
+                            <div class="member-img">
+                                <img src="assets/img/team/team-8.jpg" class="img-fluid" alt="" width="450px"
+                                    style="border-radius: 8px; height: 350px" />
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info text-center">
+                                <h4>solomon kershima yateghtegh</h4>
+                                <span>IT CONSULTANT</span>
                             </div>
                         </div>
                     </div>
