--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
         <div class="container d-flex align-items-center justify-content-between">
             <div class="logo">
                 <!-- <h1 class="text-light"><a href="index.php">NIDA</a></h1> -->
-                <a href="index.php"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
+                <a href="index.html"><img src="assets/img/INVENTION ACADEMY LOGO edited.jpg" alt="" class="img-fluid"
                         style="border-radius:50px;"></a>
             </div>
 
@@ -45,8 +45,8 @@
                     <li class="dropdown">
                         <a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="about.php">About NIDA</a></li>
-                            <li><a href="board-of-direct.php">Board Of Directors</a></li>
+                            <li><a href="about.html">About NIDA</a></li>
+                            <li><a href="board-of-direct.html">Board Of Directors</a></li>
                             <li class="dropdown">
                                 <a href="#"><span>Mentors</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
@@ -56,8 +56,8 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="team.php">Team NIDA</a></li>
-                            <li><a href="portfolio.php">NIDA Portfolio</a></li>
+                            <li><a href="team.html">Team NIDA</a></li>
+                            <li><a href="portfolio.html">NIDA Portfolio</a></li>
                             <!-- <li class="dropdown">
                   <a href="#"
                     ><span>Publications</span>
@@ -69,17 +69,17 @@
                 </li> -->
                         </ul>
                     </li>
-                    <li><a href="services.php">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Programs</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="ideasdl.php">Ideas development league </a></li>
+                            <li><a href="ideasdl.html">Ideas development league </a></li>
                             <li>
-                                <a href="inventorsdlc.php">Inventors’ Development Clubs </a>
+                                <a href="inventorsdlc.html">Inventors’ Development Clubs </a>
                             </li>
                             <li>
-                                <a href="bootcamp.php">Holiday Bootcamp/Ideas Project Development Camp
+                                <a href="bootcamp.html">Holiday Bootcamp/Ideas Project Development Camp
                                 </a>
                             </li>
                             <li>
@@ -141,7 +141,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="contact.php">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
