--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
     </header>
     <!-- End Header -->
 
-    <!-- ======= Hero Section ======= -->
     <section id="hero">
+
+
         <div class="hero-container" data-aos="fade-up">
-            <h1>Welcome to NIDA</h1>
-            <h2>The Nigerian Inventor's Development Acedemy.</h2>
+            <h1 style="font-family: monospace;"><span style="color:#94c045">Wel</span>come to <span
+                    style="color:#94c045;">NIDA</span></h1>
+            <h2 style="font-weight: bolder;">The Nigerian Inventor's Development Acedemy.</h2>
             <a href="#about" class="btn-get-started scrollto text-light"
-                style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; word-spacing:2px; font-size:25px;">Donate
+                style="font-family:Arial, Helvetica, sans-serif">Donate
                 To NIDA</a>
         </div>
     </section>
